[package]
name = "doopie"
version = "0.1.0"
edition = "2021"
authors = ["Brandon Jose Tenorio Noguera"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = "4.4.18"
digest = "0.10.7"
sha2 = "0.10.8"
walkdir = "2.4.0"
